--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 					<div class="side side-left">
 						
 						<div class="intro-content">
-							<div class="profile"><img src="img/2.png" alt="profile1"></div>
-							<h1><span>Junior<br> Education </span><span>Age 8 - 15</span></h1>
+							<div class="profile"><a href="https://padhhigh.com/"><img src="img/2.png" alt="Padhhigh"></a></div>
+							<a href="https://padhhigh.com/" style="color: white;"><h1><span>Junior<br> Education </span><span>Age 8 - 15</span></h1></a>
+							<button>Proceed</button>
 						</div>
 						<div class="overlay"></div>
 					</div>
@@ -37,8 +38,9 @@
 							
 						</header>
 						<div class="intro-content">
-							<div class="profile"><img src="img/1.png" alt="profile2"></div>
-							<h1><span>Higheh <br>Education </span><span>Age 16 - 25</span></h1>
+							<div class="profile"><a href="https://padhhigh.com/"><img src="img/1.png" alt="Padhhigh"></div></a>
+							<a href="https://padhhigh.com/" style="color: #FFB100;">	<h1><span>Higheh <br>Education </span><span>Age 16 - 25</span></h1></a>
+							<button class="btn1">Proceed</button>
 						</div>
 						<div class="overlay"></div>
 					</div>
