--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						</header>
 						<div class="intro-content">
 							<div class="profile"><a href="https://padhhigh.com/"><img src="img/1.png" alt="Padhhigh"></div></a>
-							<a href="https://padhhigh.com/" style="color: #FFB100;">	<h1><span>Higheh <br>Education </span><span>Age 16 - 25</span></h1></a>
+							<a href="https://padhhigh.com/" style="color: #FFB100;">	<h1><span>Higher <br>Education </span><span>Age 16 - 25</span></h1></a>
 							<button class="btn1">Proceed</button>
 						</div>
 						<div class="overlay"></div>
