--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 					<div class="side side-right">
 						<header class="codropsheader clearfix">
 						
-							<h2 class="logo" style="color: black;">पढ़<span style="color: black;">HIGH</span></h2>
-						<!-- <img src="logo.png"> -->
+							<h1><img src="logo.png"></h1>	
+
 							
 						</header>
 						<div class="intro-content">
