--- a/test.html
+++ b/test.html
@@ -30,10 +30,10 @@
             </div>
                 <div class="right-box">
                     <img class="photo" src="img/1.png">
-                <h1>Senior <br> Education</h1><br>
+                <h1>    Higher <br> Education</h1><br>
               
                 <h2>AGE 16-25</h2>
-                <button>
+                <button id="btn">
                     Proceed
                 </button>
             </div>
